First commit from the first project of the challenge one project one day

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <title>Midu Jobs | First Project | Consecionaria</title>
+    <title>Midu Job | First Project | RENTAL </title>
 </head>
 <body>
 
